--- a/ansible_data/roles/nginx-konfigurierende/templates/nginx.conf.j2
+++ b/ansible_data/roles/nginx-konfigurierende/templates/nginx.conf.j2
@@ -30,9 +30,9 @@ http {
         }       
         {% endfor %}
 
-        location /somelocation {
-                alias /var/www/html/data/;
-                try_files $uri $uri/ =404;
-        }
+        # location /somelocation {
+        #        alias /var/www/html/data/;
+        #        try_files $uri $uri/ =404;
+        #}
  }
 }
